# fence_insertion

./: CMakeLists.txt  FenceInsertionPass.cpp  README.md  test.c
tests/: test.c  test.ll  test_rw.c  test_rw.ll  test_wr.c  test_wr.ll  test_ww.c  test_ww.ll
